# wolfram-physics-explorer

./: .gitignore  README.md  codebase.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
coverage/: clover.xml  coverage-final.json  index.html
coverage/physics/: customRuleParser.ts.html  engine.ts.html  index.html  registry.ts.html
coverage/physics/rules/: chaos.ts.html  cosmic.ts.html  cycle.ts.html  growth.ts.html  index.html  lattice.ts.html
scripts/: verify_wasm.js
src/: App.tsx  index.css  types.ts
src/components/controls/: BottomControlBar.tsx  ControlSidebar.tsx  StatsDisplay.tsx
src/components/graph/: GraphRenderer.tsx  GraphVisualizer.tsx  geometries.ts  useGraphData.ts
src/components/graph/factories/: linkFactory.ts  nodeFactory.ts
src/components/graph/materials/: glass.ts  particles.ts
src/components/ui/: button.tsx  buttonVariants.ts  card.tsx  command.tsx  popover.tsx  select.tsx  slider.tsx
src/context/: SimulationContext.tsx
src/rust/wolfram-physics-wasm/: Cargo.toml  README.md
src/rust/wolfram-physics-wasm/src/: README.md  lib.rs  renderer.rs  shader.wgsl
src/rust/wolfram-physics-wasm/src/rules/: README.md  growth.rs  mod.rs
src/services/: worker.ts
src/services/physics/: README.md  customRuleParser.ts  engine.test.ts  engine.ts  registry.ts  types.ts
src/services/physics/__tests__/: customRuleParser.test.ts  engine.test.ts
src/services/physics/rules/: chaos.ts  cosmic.ts  cycle.ts  growth.ts  lattice.ts
src/services/workers/: idbWorker.ts  sqliteWorker.ts
(+1 files in other folders)
