[package]
name = "wolfram-physics-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
winit = "0.29"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
